tests/should_fail/try_no_result_fn.fit
// Exercises: '?' in a function that does not return Result (enclosingErr === null, checker.ts try case line 2)
enum IoError { Disconnected }
fn read() -> Result<String, IoError>

fn test() -> String {
    read()?
}
